--- a/crates/rmlx/tests/index.html
+++ b/crates/rmlx/tests/index.html
@@ -2,28 +2,28 @@
 <html lang="en-us">
     <head><meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Grcov report - crates&#x2F;rml-lsp&#x2F;src </title>
+        <title>Grcov report - crates&#x2F;rmlx&#x2F;tests </title>
         <link rel="stylesheet" href="../../../bulma.min.css"></head>
     <body>
         <div class="container">
     <nav class="breadcrumb is-right" aria-label="breadcrumbs">
-        <ul><li><a href="../../../index.html">top_level</a></li><li class="is-active"><a href="#">crates&#x2F;rml-lsp&#x2F;src</a></li>
+        <ul><li><a href="../../../index.html">top_level</a></li><li class="is-active"><a href="#">crates&#x2F;rmlx&#x2F;tests</a></li>
         </ul>
     </nav>
     <nav class="level">
         <div class="level-item has-text-centered">
         <div>
             <p class="heading">Lines</p>
-            <p class="title has-text-danger">
-                <abbr title="0 / 37">0 %</abbr></p>
+            <p class="title has-text-success">
+                <abbr title="108 / 118">91.53 %</abbr></p>
         </div>
     </div>
 
         <div class="level-item has-text-centered">
         <div>
             <p class="heading">Functions</p>
-            <p class="title has-text-danger">
-                <abbr title="0 / 32">0 %</abbr></p>
+            <p class="title has-text-success">
+                <abbr title="11 / 11">100 %</abbr></p>
         </div>
     </div>
 
@@ -53,25 +53,25 @@
         <tbody>
                     
     <tr>
-        <th><a href="main.rs.html">main.rs</a></th>
+        <th><a href="rmlx.rs.html">rmlx.rs</a></th>
         <!-- -->
         <td class="p-2">
             <progress
-                class="progress is-danger is-large"
-                value="0"
+                class="progress is-success is-large"
+                value="91.52542372881356"
                 max="100">
-                0%
+                91.53%
             </progress>
         </td>
-        <td class="has-text-centered has-background-danger p-2">
-            0%
+        <td class="has-text-centered has-background-success p-2">
+            91.53%
         </td>
-        <td class="has-text-centered has-background-danger p-2">
-            0 / 37
+        <td class="has-text-centered has-background-success p-2">
+            108 / 118
         </td>
         <!-- -->
-        <td class="has-text-centered has-background-danger p-2">0%</td>
-        <td class="has-text-centered has-background-danger p-2">0 / 32 </td>
+        <td class="has-text-centered has-background-success p-2">100%</td>
+        <td class="has-text-centered has-background-success p-2">11 / 11 </td>
         <!-- -->
         
             <td class="has-text-centered has-background-success p-2">100%</td>
