deploy: 6217654d30b56c03b7f2ac701ea6932fffb9f71a

--- a/crates/rml-lsp/src/tokens.rs.html
+++ b/crates/rml-lsp/src/tokens.rs.html
@@ -10037,7 +10037,7 @@
             </div>
             <div class="column has-background-danger-light p-0"
                  role="cell">
-                <pre class="has-background-danger-light py-0 px-2">        RmlxNode::Group | RmlxNode::ExtendGroup =&gt; group_tokens(cst, token, tokens),</pre>
+                <pre class="has-background-danger-light py-0 px-2">        RmlxNode::Group =&gt; group_tokens(cst, token, tokens),</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -10492,7 +10492,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-14 15:32</p>
+                    <p class="heading">Date: 2025-10-14 18:09</p>
                 </div>
             
         </footer>
