deploy: 0b65d0d8070a90749d6a47f8cd267137ed4dc3cd

--- a/crates/rml/src/model.rs.html
+++ b/crates/rml/src/model.rs.html
@@ -693,7 +693,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">        analyzer.next_state(namespace, identifier);</pre>
+                <pre class="has-background-success-light py-0 px-2">        analyzer.enter_element(namespace, identifier);</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -917,7 +917,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">        analyzer.exit_state(namespace, identifier);</pre>
+                <pre class="has-background-success-light py-0 px-2">        analyzer.exit_element(namespace, identifier)?;</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -1004,7 +1004,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-15 09:56</p>
+                    <p class="heading">Date: 2025-10-15 13:41</p>
                 </div>
             
         </footer>
