--- a/crates/rmlx/src/ast.rs.html
+++ b/crates/rmlx/src/ast.rs.html
@@ -2677,7 +2677,7 @@
             </div>
             <div class="column has-background-danger-light p-0"
                  role="cell">
-                <pre class="has-background-danger-light py-0 px-2">    fn fmt(&amp;self, f: &amp;mut std::fmt::Formatter&lt;&#x27;_&gt;) -&gt; std::fmt::Result {</pre>
+                <pre class="has-background-danger-light py-0 px-2">    fn fmt(&amp;self, f: &amp;mut Formatter&lt;&#x27;_&gt;) -&gt; std::fmt::Result {</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -3605,7 +3605,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">    fn fmt(&amp;self, f: &amp;mut std::fmt::Formatter&lt;&#x27;_&gt;) -&gt; std::fmt::Result {</pre>
+                <pre class="has-background-success-light py-0 px-2">    fn fmt(&amp;self, f: &amp;mut Formatter&lt;&#x27;_&gt;) -&gt; std::fmt::Result {</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -6821,7 +6821,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">    consume_token(&amp;mut iter, &amp;RmlxNode::Hash, Some(&quot;#&quot;));</pre>
+                <pre class="has-background-success-light py-0 px-2">    consume_token(&amp;mut iter, RmlxNode::Hash, Some(&quot;#&quot;));</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -6837,7 +6837,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">    consume_token(&amp;mut iter, &amp;RmlxNode::Symbol, Some(&quot;[&quot;));</pre>
+                <pre class="has-background-success-light py-0 px-2">    consume_token(&amp;mut iter, RmlxNode::Symbol, Some(&quot;[&quot;));</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -10757,7 +10757,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">    consume_token(&amp;mut iter, &amp;RmlxNode::Plus, Some(&quot;+&quot;));</pre>
+                <pre class="has-background-success-light py-0 px-2">    consume_token(&amp;mut iter, RmlxNode::Plus, Some(&quot;+&quot;));</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -11013,7 +11013,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">    consume_token(&amp;mut iter, &amp;RmlxNode::Symbol, Some(&quot;(&quot;));</pre>
+                <pre class="has-background-success-light py-0 px-2">    consume_token(&amp;mut iter, RmlxNode::Symbol, Some(&quot;(&quot;));</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -11765,7 +11765,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">fn consume_token&lt;&#x27;a, I&gt;(iter: &amp;mut I, expected_kind: &amp;RmlxNode, expected_text: Option&lt;&amp;str&gt;)</pre>
+                <pre class="has-background-success-light py-0 px-2">fn consume_token&lt;&#x27;a, I&gt;(iter: &amp;mut I, expected_kind: RmlxNode, expected_text: Option&lt;&amp;str&gt;)</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -11845,7 +11845,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">        if node.kind != *expected_kind {</pre>
+                <pre class="has-background-success-light py-0 px-2">        if node.kind != expected_kind {</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -12332,7 +12332,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-15 13:41</p>
+                    <p class="heading">Date: 2025-10-15 13:43</p>
                 </div>
             
         </footer>
