--- a/crates/rmlx/src/semantic/element.rs.html
+++ b/crates/rmlx/src/semantic/element.rs.html
@@ -85,7 +85,7 @@
             </div>
             <div class="column has-background-white p-0"
                  role="cell">
-                <pre class="has-background-white py-0 px-2">    AnalysisWorkspace, SchemaModel, TypeResolver, UnresolvedType,</pre>
+                <pre class="has-background-white py-0 px-2">    AnalysisWorkspace, TypeResolver, UnresolvedType,</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -2012,7 +2012,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-15 15:04</p>
+                    <p class="heading">Date: 2025-10-15 15:20</p>
                 </div>
             
         </footer>
