deploy: a1dffb8b8d549871b56dce373a30e0986dedb586

--- a/crates/rml-tests/tests/full.rs.html
+++ b/crates/rml-tests/tests/full.rs.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
     <nav class="breadcrumb is-right" aria-label="breadcrumbs">
-        <ul><li><a href="../../../index.html">top_level</a></li><li><a href="./index.html">crates&#x2F;rml_tests&#x2F;tests</a></li><li class="is-active"><a href="#">full.rs</a></li>
+        <ul><li><a href="../../../index.html">top_level</a></li><li><a href="./index.html">crates&#x2F;rml-tests&#x2F;tests</a></li><li class="is-active"><a href="#">full.rs</a></li>
         </ul>
     </nav>
     <nav class="level">
@@ -252,7 +252,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-15 22:44</p>
+                    <p class="heading">Date: 2025-10-16 02:10</p>
                 </div>
             
         </footer>
