--- a/crates/rml/src/analyzer.rs.html
+++ b/crates/rml/src/analyzer.rs.html
@@ -53,7 +53,7 @@
             </div>
             <div class="column has-background-white p-0"
                  role="cell">
-                <pre class="has-background-white py-0 px-2">use crate::ast::Expression;</pre>
+                <pre class="has-background-white py-0 px-2">use crate::unresolved::Expression;</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -5340,7 +5340,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-15 22:44</p>
+                    <p class="heading">Date: 2025-10-16 02:10</p>
                 </div>
             
         </footer>
