--- a/crates/type-ml-lsp/src/main.rs.html
+++ b/crates/type-ml-lsp/src/main.rs.html
@@ -2117,7 +2117,7 @@
             </div>
             <div class="column has-background-white p-0"
                  role="cell">
-                <pre class="has-background-white py-0 px-2">                let workspace = AnalysisWorkspace::new(uri.clone()).run().unwrap();</pre>
+                <pre class="has-background-white py-0 px-2">                &#x2F;&#x2F;let workspace = AnalysisWorkspace::new(uri.clone()).run().unwrap();</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -2133,7 +2133,7 @@
             </div>
             <div class="column has-background-white p-0"
                  role="cell">
-                <pre class="has-background-white py-0 px-2">                let mut schemas = self.schemas.write().unwrap();</pre>
+                <pre class="has-background-white py-0 px-2">                &#x2F;&#x2F;let mut schemas = self.schemas.write().unwrap();</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -2149,7 +2149,7 @@
             </div>
             <div class="column has-background-white p-0"
                  role="cell">
-                <pre class="has-background-white py-0 px-2">                schemas.insert(uri, workspace);</pre>
+                <pre class="has-background-white py-0 px-2">                &#x2F;&#x2F;schemas.insert(uri, workspace);</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -2501,7 +2501,7 @@
             </div>
             <div class="column has-background-white p-0"
                  role="cell">
-                <pre class="has-background-white py-0 px-2">                let workspace = AnalysisWorkspace::new(uri.clone()).run().unwrap();</pre>
+                <pre class="has-background-white py-0 px-2">                &#x2F;&#x2F;let workspace = AnalysisWorkspace::new(uri.clone()).run().unwrap();</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -2517,7 +2517,7 @@
             </div>
             <div class="column has-background-white p-0"
                  role="cell">
-                <pre class="has-background-white py-0 px-2">                let mut schemas = self.schemas.write().unwrap();</pre>
+                <pre class="has-background-white py-0 px-2">                &#x2F;&#x2F;let mut schemas = self.schemas.write().unwrap();</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -2533,7 +2533,7 @@
             </div>
             <div class="column has-background-white p-0"
                  role="cell">
-                <pre class="has-background-white py-0 px-2">                schemas.insert(uri, workspace);</pre>
+                <pre class="has-background-white py-0 px-2">                &#x2F;&#x2F;schemas.insert(uri, workspace);</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -3804,7 +3804,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-16 07:36</p>
+                    <p class="heading">Date: 2025-10-16 08:44</p>
                 </div>
             
         </footer>
