--- a/crates/type-ml-definitions/src/semantic/group.rs.html
+++ b/crates/type-ml-definitions/src/semantic/group.rs.html
@@ -1157,7 +1157,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">    pub fn symbol(&amp;self) -&gt; SymbolRef {</pre>
+                <pre class="has-background-success-light py-0 px-2">    pub const fn symbol(&amp;self) -&gt; SymbolRef {</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -3036,7 +3036,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-16 08:44</p>
+                    <p class="heading">Date: 2025-10-16 09:32</p>
                 </div>
             
         </footer>
