deploy: e64637688e8cb7fb3a579996dbcd08dcaaa5dd81

--- a/crates/lexer-core/src/index.html
+++ b/crates/lexer-core/src/index.html
@@ -14,8 +14,8 @@
         <div class="level-item has-text-centered">
         <div>
             <p class="heading">Lines</p>
-            <p class="title has-text-warning">
-                <abbr title="62 / 69">89.86 %</abbr></p>
+            <p class="title has-text-success">
+                <abbr title="63 / 69">91.3 %</abbr></p>
         </div>
     </div>
 
@@ -58,16 +58,16 @@
         <td class="p-2">
             <progress
                 class="progress is-success is-large"
-                value="97.82608695652173"
+                value="100"
                 max="100">
-                97.83%
+                100%
             </progress>
         </td>
         <td class="has-text-centered has-background-success p-2">
-            97.83%
+            100%
         </td>
         <td class="has-text-centered has-background-success p-2">
-            45 / 46
+            46 / 46
         </td>
         <!-- -->
         <td class="has-text-centered has-background-danger p-2">50%</td>
@@ -113,7 +113,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-16 09:32</p>
+                    <p class="heading">Date: 2025-10-16 12:42</p>
                 </div>
             
         </footer>
